Fix HTML encoding issues and clean up document

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <header class="hero">
         <div class="hero-text" data-aos="fade-right">
-            <h1>Expert in <span>Machine Learning</span><br>Models</h1>
+            <h1>Hii... I ' Am <span> Dheeraj Prajapat</span><br> Expert ML Models</h1>
             <p>I am a junior data scientist and Python programmer. I analyse data and build ML models for predictions and real estate use cases.</p>
             
             <div class="socials">
@@ -226,4 +226,5 @@
     </script>
 
 </body>
+
 </html>
