--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <header class="hero">
         <div class="hero-text" data-aos="fade-right">
-            <h1>Hii... I ' Am <span> Dheeraj Prajapat</span><br> Expert ML Models</h1>
+            <h1>Hii... I ' Am <span> Dheeraj Prajapat</span><br> Expert In ML Models</h1>
             <p>I am a junior data scientist and Python programmer. I analyse data and build ML models for predictions and real estate use cases.</p>
             
             <div class="socials">
@@ -228,3 +228,4 @@
 </body>
 
 </html>
+
