Correct HTML encoding and enhance project links
Fixed HTML encoding issues and improved project links.

--- a/index.html
+++ b/index.html
@@ -158,9 +158,11 @@
         <h2 class="section-title" data-aos="fade-up">Best <span>Projects</span></h2>
         <div class="content-grid">
             <div class="card" data-aos="slide-up">
+                <a href="https://dheerajprajapat.streamlit.app/" target="_blank">
                 <img src="proj1.jpg" alt="P1">
+                </a>
                 <h3>House Price Prediction</h3>
-                <p>Advanced data Machine learning algorithm and advance python libraries.</p>
+                <p>Advanced data Machine learning algorithm and advance python libraries. click t see</p>
             </div>
             <div class="card" data-aos="slide-up" data-aos-delay="100">
                 <img src="proj2.jpg" alt="P2">
@@ -228,4 +230,5 @@
 </body>
 
 </html>
+
 
