Add Google site verification meta tag
Added Google site verification meta tag to the head section.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="CLSNHuZ4IwJmffj1Drtvj8pHdYdtX7AyJ_XGDRjn3hM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dheeraj Prajapat | ML Expert Portfolio</title>
@@ -230,5 +231,6 @@
 </body>
 
 </html>
+
 
 
