--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         /* Common Elements */
         .socials a { font-size: 1.6rem; color: var(--text-white); margin-right: 25px; transition: 0.4s; text-decoration: none; display: inline-block; }
         .socials a:hover { color: var(--accent); transform: scale(1.3) rotate(10deg); }
-        .btn-group { display: flex; gap: 15px; }
+        .btn-group { display: flex; gap: 15px; padding-top: 75px }
         .btn { padding: 14px 30px; border-radius: 50px; text-decoration: none; font-weight: 600; transition: 0.4s; cursor: pointer; border: none; }
         .btn-main { background: var(--accent); color: #000; box-shadow: 0 5px 15px rgba(0, 212, 255, 0.3); }
         .btn-outline { border: 2px solid var(--accent); color: var(--accent); background: transparent; }
@@ -97,6 +97,22 @@
         }
     </style>
 </head>
+    <script>
+function sendToWhatsApp() {
+    let name = document.getElementById('name').value;
+    let email = document.getElementById('email').value;
+    let details = document.getElementById('details').value;
+    let number = "9111514980"; 
+
+    // Message format karna
+    let url = "https://wa.me/" + number + "?text=" 
+            + "Name: " + name + "%0a" 
+            + "Email: " + email + "%0a" 
+            + "Details: " + details;
+
+    window.open(url, '_blank').focus();
+}
+</script>
 <body>
 
     <nav>
@@ -163,12 +179,14 @@
                 <img src="proj1.jpg" alt="P1">
                 </a>
                 <h3>House Price Prediction</h3>
-                <p>Advanced data Machine learning algorithm and advance python libraries. click t see</p>
+                <p>An AI system where you can check the price of house according to you need like area,bhk,facing etc.Based on real state data of Indore.<b>CLICK TO SEE</b></p>
             </div>
             <div class="card" data-aos="slide-up" data-aos-delay="100">
-                <img src="proj2.jpg" alt="P2">
-                <h3>Family AI Agent</h3>
-                <p>Personal family agent using API and OpenAI with advance tools.</p>
+                <a href="https://dheerajprajapatmlmodel.blogspot.com/" target="_blank">
+                <img src="proj2.png" alt="P2">
+                </a>
+                <h3>Smart student Result analysis</h3>
+                <p>An AI model in which you can check wheather you will pass in final exam or not.According to you past academic performance.<b>CLICK TO SEE</b></p>
             </div>
         </div>
     </section>
@@ -196,11 +214,11 @@
     <section id="contact" data-aos="zoom-in">
         <h2 class="section-title">Send A <span>Message</span></h2>
         <div class="contact-container">
-            <form class="contact-form" action="contact.php" method="POST">
-                <input type="text" name="full_name" placeholder="Full Name" required>
-                <input type="email" name="email_address" placeholder="Email Address" required>
-                <textarea name="project_details" rows="5" placeholder="Project Details" required></textarea>
-                <button type="submit" class="btn btn-main" style="width: 100%;">Connect with me</button>
+            <form class="contact-form" id = "whatsappForm">
+                <input type="text" id="name" placeholder="Full Name" required>
+                <input type="email" id="email" placeholder="Email Address" required>
+                <textarea id="details" rows="5" placeholder="Project Details What You Want" required></textarea>
+                <button type="button" onclick="sendToWhatsApp()" class="btn btn-main" style="width: 100%;">Connect with me</button>
             </form>
         </div>
     </section>
@@ -231,6 +249,7 @@
 </body>
 
 </html>
+
 
 
 
