Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ function sendToWhatsApp() {
                 <p>An AI system where you can check the price of house according to you need like area,bhk,facing etc.Based on real state data of Indore.<b>CLICK TO SEE</b></p>
             </div>
             <div class="card" data-aos="slide-up" data-aos-delay="100">
-                <a href="https://dheerajprajapatmlmodel.blogspot.com/" target="_blank">
+                <a href="https://dheerajprajapat-studentanalyse-system.streamlit.app/" target="_blank">
                 <img src="proj2.png" alt="P2">
                 </a>
                 <h3>Smart student Result analysis</h3>
@@ -249,6 +249,7 @@ function sendToWhatsApp() {
 </body>
 
 </html>
+
 
 
 
